# qstopmotion

./: .hgignore  .hgtags  .hgtimestamp  AUTHORS  CMakeLists.txt  Changes.txt  README.txt  README_Makefile_Linux.txt  README_NMake_Windows.txt  README_QtCreator_Linux.txt  README_QtCreator_Windows.txt  README_VisualStudio_Windows.txt  appveyor.yml  qstopmotion.cppcheck  qstopmotion.desktop  qstopmotion.menufile  qstopmotion.pro  qstopmotion.xpm
cmake/: FindGPhoto2.cmake  FindGPhoto2PkgConfig.cmake  FindGStreamerOSSBUILD.cmake  FindGStreamerPkgConfig.cmake  FindGStreamerPkgConfig.cmake~  FindGStreamerPluginsPkgConfig.cmake  FindQwt.cmake  FindV4L2.cmake  FindV4L2PkgConfig.cmake
cmake-old/: FindGPhoto2.cmake  FindGStreamerPkgConfig.cmake  FindGStreamerWinX86.cmake  FindV4L2PkgConfig.cmake
deb/: changelog  copyright  postinst  qstopmotion.menu  qstopmotion.xpm
debian/: changelog  control  copyright  qstopmotion.doc-base  rules  watch
debian/patches/: 0001-Fix-the-function-signature-of-GphotoGrabber-errorDum.patch  series
linux/: qstopmotion.1  qstopmotion.desktop  qstopmotion.mime
manual/: _template.html  adding_pictures.html  adding_sound.html  controlling_camera.html  exporting_video.html  getting_images.html  getting_started.html  import_settings.html  index.html  other_programs.html  preferences.html  properties.html  running_animation.html  shortcut_keys.html  trouble_shooting.html  using_camera.html  using_webcamera.html  x126.html  x177.html  x205.html  x211.html  x249.html  x272.html  x275.html  x30.html  x459.html  x69.html  x88.html
src/: main.cpp  qstopmotion.rc
src/application/: camerahandler.cpp  camerahandler.h  editmenuhandler.cpp  editmenuhandler.h  externalchangemonitor.cpp  externalchangemonitor.h  runanimationhandler.cpp  runanimationhandler.h  soundhandler.cpp  soundhandler.h
src/domain/: domainfacade.cpp  domainfacade.h
src/domain/animation/: animationproject.cpp  animationproject.h  exposure.cpp  exposure.h  projectserializer.cpp  projectserializer.h  scene.cpp  scene.h  take.cpp  take.h
src/domain/undo/: undobase.cpp  undobase.h  undoexposureadd.cpp  undoexposureadd.h  undoexposureinsert.cpp  undoexposureinsert.h  undoexposuremove.cpp  undoexposuremove.h  undoexposureremove.cpp  undoexposureremove.h  undoexposureselect.cpp  undoexposureselect.h  undoprojectclose.cpp  undoprojectclose.h  undoprojectnew.cpp  undoprojectnew.h  undoprojectopen.cpp  undoprojectopen.h  undoprojectsave.cpp  undoprojectsave.h  undosceneadd.cpp  undosceneadd.h  undosceneinsert.cpp  undosceneinsert.h  undoscenemove.cpp  undoscenemove.h  undosceneremove.cpp  undosceneremove.h  undosceneselect.cpp  undosceneselect.h  undotakeadd.cpp  undotakeadd.h  undotakeinsert.cpp  undotakeinsert.h  undotakemove.cpp  undotakemove.h  undotakeremove.cpp  undotakeremove.h  undotakeselect.cpp  undotakeselect.h
src/frontends/: frontend.h  observer.h  viewfacade.cpp  viewfacade.h
src/frontends/qtfrontend/: mainwindowgui.cpp  mainwindowgui.h  menuframe.cpp  menuframe.h  qtfrontend.cpp  qtfrontend.h  toolbar.cpp  toolbar.h
src/frontends/qtfrontend/dialogs/: aboutdialog.cpp  aboutdialog.h  cameracontrollerdialog.cpp  cameracontrollerdialog.h  clickablelabel.txt  descriptiondialog.cpp  descriptiondialog.h  externalcommanddialog.cpp  externalcommanddialog.h  helpbrowser.cpp  helpbrowser.h  licence.h  startdialog.cpp  startdialog.h
src/frontends/qtfrontend/elements/: clickablelabel.cpp  clickablelabel.h  flexiblelineedit.cpp  flexiblelineedit.h  flexiblespinbox.cpp  flexiblespinbox.h
src/frontends/qtfrontend/frameview/: frameviewimage.cpp  frameviewimage.h  frameviewinterface.cpp  frameviewinterface.h  imagegrabthread.cpp  imagegrabthread.h
src/frontends/qtfrontend/preferences/: controlerwidget.cpp  controlerwidget.h  controllerwidget.cpp  controllerwidget.h  defaulttab.cpp  defaulttab.h  exporttab.cpp  exporttab.h  exportwidget.cpp  exportwidget.h  generaldialog.cpp  generaldialog.h  generaltab.cpp  generaltab.h  generalwidget.cpp  generalwidget.h  grabberwidget.cpp  (+13 more)
src/technical/: externalchangemonitor.cpp  externalchangemonitor.h  preferenceselement.cpp  preferenceselement.h  preferencestool.cpp  preferencestool.h  util.cpp  util.h
src/technical/audio/: audiodriver.h  audioformat.h
src/technical/grabber/: gphotocontroller.cpp  gphotocontroller.h  gphotograbber.cpp  gphotograbber.h  grabbercontrolcapabilities.cpp  grabbercontrolcapabilities.h  grabbercontroller.cpp  grabbercontroller.h  grabberdirectshowcontroller.cpp  grabberdirectshowcontroller.h  grabberresolution.cpp  grabberresolution.h  grabberv4l2controller.cpp  grabberv4l2controller.h  gstreamerdevicegrabber.cpp  gstreamerdevicegrabber.h  gstreamerdirectshow1394grabber.cpp  gstreamerdirectshow1394grabber.h  gstreamerdirectshowusbgrabber.cpp  gstreamerdirectshowusbgrabber.h  gstreamerdv1394grabber.cpp  gstreamerdv1394grabber.h  gstreamergrabber.cpp  gstreamergrabber.h  gstreamerv4l2grabber.cpp  gstreamerv4l2grabber.h  gstreamervideotestgrabber.cpp  gstreamervideotestgrabber.h  imageconverter.cpp  imageconverter.h  imagegrabber.cpp  imagegrabber.h  imagegrabberdevice.cpp  imagegrabberdevice.h  imagegrabberfacade.cpp  imagegrabberfacade.h  imagegrabberthread.cpp  imagegrabberthread.h  windowsuvccontroller.cpp  windowsuvccontroller.h
src/technical/videoencoder/: ffmpegencoder.cpp  ffmpegencoder.h  libavencoder.cpp  libavencoder.h  videoencoder.cpp  videoencoder.h  videoencoderfactory.cpp  videoencoderfactory.h
styles/Nicos/: stylesheet.qss
translations/: qstopmotion_cs.qm  qstopmotion_cs.ts  qstopmotion_da.qm  qstopmotion_da.ts  qstopmotion_de.qm  qstopmotion_de.ts  qstopmotion_de.ts.old  qstopmotion_el.qm  qstopmotion_el.ts  qstopmotion_es.qm  qstopmotion_es.ts  qstopmotion_fr.qm  qstopmotion_fr.ts  qstopmotion_fr.ts.old  qstopmotion_it.qm  qstopmotion_it.ts  qstopmotion_pt.qm  qstopmotion_pt.ts  qstopmotion_ru.qm  qstopmotion_ru.ts  qstopmotion_se.qm  qstopmotion_se.ts  qstopmotion_sv.qm  qt_cs.ts  qt_da.qm  qt_da.ts  qt_de.qm  qt_de.ts  qt_fr.qm  qt_fr.ts  translation.txt
windows/: autorun.inf  readme.txt
(+48 files in other folders)
